syntax = "proto3";

package de.phyrone.kiwi.auth;

import "google/protobuf/timestamp.proto";
import "google/protobuf/api.proto";


message ValidateSessionRequest{
  string token = 1;
}
message ValidateSessionResponse{
  message Session{}
  message InvalidSession{}
  oneof response{
    Session session = 0x01;
    InvalidSession invalidSession = 0x02;
  }
}

message LoginRequest{
  message UserPassword{
    string username = 1;
    string password = 2;
    string otp = 3;
  }

  message WebAuthn{
    string username = 1;
    string challenge = 2;
    string origin = 3;
  }

  oneof login{
    UserPassword userPassword = 0x01;
  }
}


service AuthService{
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse){
    option idempotency_level = IDEMPOTENT;
  }


}